src/components/UI/Card/Card.module.css
.card {
    background-color: #fff;
    display: flex;
    flex-direction: column;
    padding: 20px;
    width: 264px;
    max-height: 281px;
    height: fit-content;
    transition: all 0.3s ease-in-out;
}

.card:hover {
    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
    transform: translateY(-5px);
}

.card__title {
    font-size: 1.5rem;
}

.card__text {
    font-size: .9rem;
}

@media screen and (max-width: 768px) {
    .card {
        width: 343px;
        height: fit-content;
    }

    .card__title {
        font-size: 1.2rem;
    }
}

